--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,7 @@
                 });
                 break;
               case "DRAW":
+                // console.log(effect.layers);
                 graphics.drawSprites(effect.layers);
                 break;
               default:
