--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <script src="./js/pixi.min.js"></script>
     <script src="./js/pixi-viewport.js"></script>
     <script src="./js/pixi-layers.js"></script>
+    <script src="./js/pixi-particles.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/particles.js"></script>
     <script>
       window.graphics = {};
 
@@ -157,6 +159,12 @@
         }
       };
 
+      graphics.drawFx = function(effect) {
+        console.log(effect.x, effect.y);
+        window.emitter = makeEmitter(viewport, effect.x, effect.y);
+        window.emitter.playOnceAndDestroy(function() { console.log("DONE") });
+      }
+
       function toColor(str) {
         //console.log(str.substring(1), 16);
         return parseInt(str.substring(1), 16);
@@ -217,6 +225,9 @@
               case "DRAW":
                 // console.log(effect.layers);
                 graphics.drawSprites(effect.layers);
+                break;
+              case "DRAW_FX":
+                graphics.drawFx(effect);
                 break;
               default:
                 //console.error("unknown effect: " + JSON.stringify(effect));
