--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
               case "rect":
                 pixiGraphics.beginFill(
                   toColor(g.bgColor),
-                  1.0
+                  g.alpha
                 );
                 pixiGraphics.drawRect(
                   g.x + 0.5,
@@ -163,7 +163,7 @@
                 let x = g.x;
                 let y = g.y;
 
-                pixiGraphics.beginFill(0xFFFFFF, 0.8);
+                pixiGraphics.beginFill(0xFFFFFF, g.alpha);
 
                 pixiGraphics.moveTo(x, y);
                 pixiGraphics.lineTo(g.arcLeftX, g.arcLeftY);
