Can water plants

--- a/public/index.html
+++ b/public/index.html
@@ -162,6 +162,7 @@
               case "arc":
                 let x = g.x;
                 let y = g.y;
+                //let dist = Math.sqrt(((x - g.arcLeftX) ^ 2) + ((y - g.arcLeftY) ^ 2));
 
                 pixiGraphics.beginFill(0xFFFFFF, g.alpha);
 
