--- a/public/index.html
+++ b/public/index.html
@@ -299,7 +299,13 @@
           heroSprite.x = hero.x * 32;
           heroSprite.y = hero.y * 32;
 
-          equippableSprite.texture =  PIXI.utils.TextureCache["spazer_" + imgPrefix + ".png"];
+          if (hero.equipped === "gun") {
+            equippableSprite.texture = PIXI.utils.TextureCache["spazer_" + imgPrefix + ".png"];
+          } else if (hero.equipped === "scythe") {
+            equippableSprite.texture = PIXI.utils.TextureCache["scythe_" + imgPrefix + ".png"];
+          } else {
+            equippableSprite.texture = PIXI.utils.TextureCache["scythe_" + imgPrefix + ".png"];
+          }
           equippableSprite.x = hero.x * 32;
           equippableSprite.y = hero.y * 32 + 22;
 
