--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>GAME</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <link rel="stylesheet" type="text/css" href="./css/clock.css">
+    <!--<link rel="stylesheet" type="text/css" href="./css/clock.css">-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Rock+Salt" rel="stylesheet">
   </head>
   <body>
     <div id="pixi"></div>
